--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-vector-icons/evil-icons": "^12.4.0",
+    "@react-native-vector-icons/fontawesome6": "^12.3.0",
+    "@react-native-vector-icons/ionicons": "^12.3.0",
+    "@react-navigation/bottom-tabs": "^7.8.8",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.8.0",
     "expo": "^54.0.0",
