--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^7.8.0",
     "axios": "^1.13.2",
     "expo": "^54.0.0",
+    "expo-linear-gradient": "^15.0.8",
     "expo-status-bar": "~3.0.8",
     "lottie-react-native": "^7.3.4",
     "nativewind": "latest",
