--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@react-navigation/bottom-tabs": "^7.8.8",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.8.0",
+    "@types/lodash.debounce": "^4.0.9",
     "axios": "^1.13.2",
     "expo": "^54.0.0",
     "expo-linear-gradient": "^15.0.8",
     "expo-status-bar": "~3.0.8",
+    "lodash.debounce": "^4.0.8",
     "lottie-react-native": "^7.3.4",
     "nativewind": "latest",
     "react": "19.1.0",
