--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.2.8",
     "@react-native-icons/heroicons": "^0.0.2",
     "@react-native-vector-icons/ionicons": "^12.3.0",
     "@react-navigation/bottom-tabs": "^7.8.8",
@@ -18,20 +19,20 @@
     "@react-navigation/native-stack": "^7.8.0",
     "@types/lodash.debounce": "^4.0.9",
     "axios": "^1.13.2",
-    "expo": "^54.0.0",
+    "expo": "~54.0.33",
     "expo-linear-gradient": "^15.0.8",
-    "expo-status-bar": "~3.0.8",
+    "expo-status-bar": "~3.0.9",
     "lodash.debounce": "^4.0.8",
     "lottie-react-native": "^7.3.4",
     "nativewind": "latest",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-reanimated": "~4.1.1",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-reanimated": "~4.1.5",
     "react-native-reanimated-carousel": "^4.0.3",
     "react-native-safe-area-context": "~5.6.2",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.15.1",
-    "react-native-worklets": "0.5.1"
+    "react-native-svg": "^15.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
